[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vapt-tool"
version = "3.0.0"
description = "AI-Powered Vulnerability Assessment & Penetration Testing Tool"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
scan = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "nmap>=0.7",
    "scapy>=2.5",
]
ai = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]
workers = [
    "celery[redis]>=5.3",
    "redis>=4.6",
]
db = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]
report = [
    "matplotlib>=3.7",
    "plotly>=5.15",
    "weasyprint>=59",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
vapt = "vapt_tool:main"

[tool.setuptools]
py-modules = ["vapt_tool"]
